--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,15 @@ nav {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.295);
 }
 
+#events {
+    padding: 2em 3em;
+    height: 75vh;
+}
+
+#events iframe {
+    float: right;
+}
+
 #contact {
     padding: 5%;
 }
@@ -118,7 +127,7 @@ nav {
 
 #cinfo a i {
     font-size: 1.5em;
-    margin: 0.1em;
+    margin: 0.2em;
     vertical-align: middle;
 }
 
@@ -134,4 +143,47 @@ footer {
     text-decoration: none;
     color: rgb(238, 238, 238);
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.295);
+}
+
+#maillist {
+    text-align: center;
+    padding: 1%;
+}
+
+#maillist h1{
+font-family: 'Metal Mania', cursive;
+font-size: 2.5em;
+color: rgb(233, 50, 50);
+text-shadow: rgba(0, 0, 0, 0.295);
+font-weight: 500;
+margin: 0;
+}
+
+#maillist input:nth-child(1) {
+    border: none;
+    padding: 5px;
+    background-color: rgb(44, 44, 44);
+    color: rgb(238, 238, 238);
+    width: 400px;
+    text-align: center;
+}
+
+#maillist input[type="button"] {
+    margin: 0.5em;
+    padding: 3px;
+    color: rgb(233, 50, 50);
+    border: 2px solid rgb(233, 50, 50);
+    border-radius: 25px;
+    background: none;
+    width: 100px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.25em;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.295);
+    transition: all 0.2s;
+}
+
+#maillist input[type="button"]:hover {
+    border: 2px solid rgb(238, 238, 238);
+    color: rgb(238, 238, 238);
 }
