--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     line-height: 1.5;
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
@@ -44,7 +46,6 @@ nav {
 
 #welcome {
     height: 100vh;
-    padding: 5%;
 }
 
 #welcome::after {
@@ -85,7 +86,8 @@ h1 {
 }
 
 #events {
-    padding: 3em;
+    margin: 1em;
+    padding: 2em;
     height: 85vh;
     /* display: flex; */
 }
@@ -157,9 +159,20 @@ footer {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.295);
 }
 
+#menuu {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 3em;
+}
+
+#menuu img {
+    width: 450px;
+}
+
 #maillist {
     text-align: center;
     padding: 1%;
+    background-color: black;
 }
 
 #maillist input:nth-child(1) {
@@ -171,12 +184,12 @@ footer {
     text-align: center;
 }
 
-#maillist input[type="button"] {
+#maillist input[type="submit"] {
     margin: 0.5em;
     padding: 3px;
-    color: rgb(233, 50, 50);
-    border: 2px solid rgb(233, 50, 50);
-    border-radius: 25px;
+    color: rgb(238, 238, 238);
+    border: 2px dashed rgb(238, 238, 238);
+    border-radius: 15px;
     background: none;
     width: 100px;
     text-transform: uppercase;
@@ -186,7 +199,8 @@ footer {
     transition: all 0.2s;
 }
 
-#maillist input[type="button"]:hover {
-    border: 2px solid rgb(238, 238, 238);
-    color: rgb(238, 238, 238);
+#maillist input[type="submit"]:hover {
+    border: 2px solid rgb(255, 0, 0);
+    color: rgb(255, 0, 0);
+    cursor: pointer;
 }
