--- a/structure.css
+++ b/structure.css
@@ -14,29 +14,40 @@ nav {
     align-content: center;
 }
 
-.nav-link {
-    align-self: flex-end;
-}
 
-.flex {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
+@media only screen and (min-width: 320px) and (max-width: 479px){ ... }
 
-#contact {
-    display: flex;
-    justify-content: space-evenly;
-}
+@media only screen and (min-width: 480px) and (max-width: 767px){ ... }
 
-#cinfo {
-    display: flex;
-    white-space: nowrap;
-    flex-wrap: inherit;
-}
+@media only screen and (min-width: 768px) and (max-width: 991px){ 
+    .flex {
+        align-items: stretch;
+    }
+ }
 
-#menuu {
-    display: flex;
-    justify-content: space-evenly;
-}
+@media only screen and (min-width: 992px){ 
+
+    
+    .flex {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+    
+    #contact {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    #cinfo {
+        display: flex;
+        white-space: nowrap;
+        flex-wrap: inherit;
+    }
+    
+    #menuu {
+        display: flex;
+        justify-content: space-evenly;
+    }
+ }
