--- a/structure.css
+++ b/structure.css
@@ -15,15 +15,21 @@ nav {
 }
 
 
-@media only screen and (min-width: 320px) and (max-width: 479px){ ... }
+@media only screen and (min-width: 320px) and (max-width: 479px){ 
+.flex {
+    flex-direction: column;
+}
+}
 
-@media only screen and (min-width: 480px) and (max-width: 767px){ ... }
+@media only screen and (min-width: 480px) and (max-width: 767px){ 
 
-@media only screen and (min-width: 768px) and (max-width: 991px){ 
-    .flex {
-        align-items: stretch;
-    }
- }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1142px){ 
+#events #text {
+    width: 100%;
+}
+}
 
 @media only screen and (min-width: 992px){ 
 
