--- a/structure.css
+++ b/structure.css
@@ -14,25 +14,68 @@ nav {
     align-content: center;
 }
 
-
-@media only screen and (min-width: 320px) and (max-width: 479px){ 
-.flex {
-    flex-direction: column;
-}
-}
-
-@media only screen and (min-width: 480px) and (max-width: 767px){ 
-
+.cflex {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1142px){ 
-#events #text {
-    width: 100%;
-}
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+    .flex {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    #iframe iframe:nth-child(1) {
+        display: none;
+    }
+
+    #iframe iframe:nth-child(2) {
+        display: none;
+    }
+
+    #iframe iframe:nth-child(3) {
+        display: block;
+    }
 }
 
-@media only screen and (min-width: 992px){ 
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .flex {
+        display: flex;
+        flex-direction: row;
+    }
 
+    #iframe iframe:nth-child(1) {
+        display: none;
+    }
+
+    #iframe iframe:nth-child(2) {
+        display: none;
+    }
+
+    #iframe iframe:nth-child(3) {
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1439px) {
+
+    #iframe iframe:nth-child(1) {
+        display: none;
+    }
+
+    #iframe iframe:nth-child(2) {
+        display: block;
+    }
+
+    #iframe iframe:nth-child(3) {
+        display: none;
+    }
+
+    #events #text {
+        width: 55vmin;
+    }
     
     .flex {
         display: flex;
@@ -40,20 +83,76 @@ nav {
         justify-content: space-evenly;
         flex-wrap: wrap;
     }
-    
+        
     #contact {
         display: flex;
         justify-content: space-evenly;
     }
-    
+        
     #cinfo {
         display: flex;
         white-space: nowrap;
         flex-wrap: inherit;
     }
-    
+        
     #menuu {
         display: flex;
         justify-content: space-evenly;
     }
- }
+}
+
+@media only screen and (min-width: 590px) and (max-width: 767px) {
+    #iframe iframe:nth-child(1) {
+        display: block;
+    }
+
+    #iframe iframe:nth-child(2) {
+        display: none;
+    }
+
+    #iframe iframe:nth-child(3) {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    #iframe iframe:nth-child(1) {
+        display: block;
+    }
+
+    #iframe iframe:nth-child(2) {
+        display: none;
+    }
+
+    #iframe iframe:nth-child(3) {
+        display: none;
+    }
+
+    #events #text {
+        width: 55vmin;
+    }
+    
+    .flex {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+        
+    #contact {
+        display: flex;
+        justify-content: space-evenly;
+    }
+        
+    #cinfo {
+        display: flex;
+        white-space: nowrap;
+        flex-wrap: inherit;
+    }
+        
+    #menuu {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+}
