--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ h1 {
 }
 
 #events #text {
-    width: 45vmax;
+    width: 50vmin;
     margin: 1em;
 }
 
@@ -81,9 +81,6 @@ h1 {
     margin: 0;
 }
 
-#events #iframe {
-    float: right;
-}
 
 #contact {
     padding: 2em;
