--- a/structure.css
+++ b/structure.css
@@ -22,9 +22,21 @@ nav {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
+
     .flex {
         display: flex;
         flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #events #text {
+        margin: 1em;
+        width: 70vmin;
+    }
+
+    #iframe {
+        width: fit-content;
     }
 
     #iframe iframe:nth-child(1) {
