--- a/hamburger.css
+++ b/hamburger.css
@@ -30,9 +30,4 @@
         align-content: center;
     }
 }
-
-@media only screen and (min-width: 768px) {
-    .nav-link {
-        display: block;
-    }
-}
+4
