--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ nav {
 
 #welcome {
     height: 100vh;
+    margin-top: 44px;
 }
 
 #welcome::after {
@@ -149,7 +150,7 @@ footer {
     padding: 5px;
     background-color: rgb(44, 44, 44);
     color: rgb(238, 238, 238);
-    width: 400px;
+    width: 50vw;
     text-align: center;
 }
 
